Fixed bid layout problem.

--- a/Setback.Web/Client/public/index.css
+++ b/Setback.Web/Client/public/index.css
@@ -53,12 +53,15 @@ main {
 .bid {
     width: min(8vw, 12vh);
     font-size: min(2vw, 2vh);
-    margin-left: 1vw;
-    margin-right: 1vw;
     padding: min(1vw, 1vh);
     background-color: whitesmoke;
     text-align: center;
     border-radius: min(1vw, 1vh);
+}
+
+.bid-clickable {
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .bid-static {
